--- a/public/.htaccess
+++ b/public/.htaccess
@@ -35,7 +35,7 @@ ServerSignature Off
   Header unset X-Pingback
 
   Header always set X-Frame-Options "SAMEORIGIN"
-  # Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+  Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
   Header always set X-Xss-Protection "1; mode=block"
   Header always set X-Content-Type-Options "nosniff"
   Header always set Referrer-Policy "no-referrer-when-downgrade"
